--- a/dossier_CSS/styles.css
+++ b/dossier_CSS/styles.css
@@ -16,5 +16,73 @@
 body
 {
     font-family: 'Raleway', sans-serif;
+    width: 1440px;
 }
 
+body a 
+{
+    text-decoration: none;
+    color: black;
+}
+
+/*header*/
+
+header
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 50px 50px 50px 50px;
+}
+
+.logo
+{
+    width: 100px;
+}
+
+header a
+{
+    margin-right: 50px;
+    padding: 62px 20px 0 20px;
+}
+
+a:hover
+{
+    color: #0065FC;
+    border-top: solid 2px #0065FC;
+}
+
+@media screen and (max-width: 768px) 
+{
+    body
+    {
+        width: auto;
+    }
+    
+    header
+    {
+        flex-direction:column;
+        margin: 50px 0px 50px 0px;
+    }
+
+    header nav
+    {
+        width: 100%;
+        border-bottom: solid 3px grey;
+        padding: 62px 60px 15px 60px;
+        
+    }
+
+    header a 
+    {
+        justify-content: space-around;
+        padding-bottom: 15px;
+    }
+
+    a:hover
+    {
+        color: #0065FC;
+        border-bottom: solid 3px #0065FC;
+        border-top: none
+    }
+}
