--- a/dossier_CSS/styles.css
+++ b/dossier_CSS/styles.css
@@ -7,16 +7,12 @@
  }
 /* box-sizing est appliqué seulement à cette classe */
 
-* {
- box-sizing: border-box;
-/* box-sizing est appliqué à tous les éléments */
-}
-
-
 body
 {
     font-family: 'Raleway', sans-serif;
     width: 1440px;
+    margin: 50px 50px 50px 50px;
+    border:solid 1px black
 }
 
 body a 
@@ -31,22 +27,21 @@ header
 {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin: 50px 50px 50px 50px;
+    
 }
 
 .logo
 {
-    width: 100px;
+    padding: 0 15px 0 15px;
+    width: 150px;
 }
 
 header a
 {
-    margin-right: 50px;
-    padding: 62px 20px 0 20px;
+    padding: 48px 30px 15px 30px;
 }
 
-a:hover
+header a:hover
 {
     color: #0065FC;
     border-top: solid 2px #0065FC;
@@ -58,31 +53,60 @@ a:hover
     {
         width: auto;
     }
-    
+
     header
     {
         flex-direction:column;
-        margin: 50px 0px 50px 0px;
+        align-items: center;
     }
 
     header nav
     {
+        border-bottom: solid 3px #F2F2F2; 
+        margin-top: 20px;
+        padding-bottom: 15px;
         width: 100%;
-        border-bottom: solid 3px grey;
-        padding: 62px 60px 15px 60px;
+        position: relative;
+    }
+
+    nav a 
+    {
+        padding-bottom: 15px;
         
     }
 
-    header a 
-    {
-        justify-content: space-around;
-        padding-bottom: 15px;
-    }
-
-    a:hover
+    header a:hover
     {
         color: #0065FC;
         border-bottom: solid 3px #0065FC;
         border-top: none
     }
 }
+
+/*main*/
+
+
+main h1
+{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+main h2
+{
+    font-size: 17px;
+    font-weight: bold;
+}
+
+main h3
+{
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#section_centrale, #filtres
+{
+    display: flex;
+}
+
+
