--- a/dossier_CSS/styles.css
+++ b/dossier_CSS/styles.css
@@ -1,18 +1,18 @@
 /*Déclaration initiale de box-sizing*/
 
-.box {
-    box-sizing: border-box; /* Opera/IE 8+ */
-    -moz-box-sizing: border-box; /* Firefox, autres Gecko */
-    -webkit-box-sizing: border-box; /* Safari/Chrome, autres WebKit */
- }
-/* box-sizing est appliqué seulement à cette classe */
+* {
+    box-sizing: border-box;
+   /* box-sizing est appliqué à tous les éléments */
+   }
+
+/*base*/
 
 body
 {
     font-family: 'Raleway', sans-serif;
-    width: 1440px;
+    font-size: 16px;
+    max-width: 1440px;
     margin: 50px 50px 50px 50px;
-    border:solid 1px black
 }
 
 body a 
@@ -21,24 +21,49 @@ body a
     color: black;
 }
 
+h1
+{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+h2
+{
+    font-size: 17px;
+    font-weight: bold;
+}
+
+h3
+{
+    font-size: 15px;
+    font-weight: bold;
+}
+
 /*header*/
+
+/*----------------------------------------------------------------*/
 
 header
 {
     display: flex;
-    justify-content: space-between;
-    
+    justify-content: space-between; 
+    margin-bottom: 30px;   
 }
 
 .logo
 {
-    padding: 0 15px 0 15px;
-    width: 150px;
+    width: 125px;
 }
 
 header a
 {
-    padding: 48px 30px 15px 30px;
+    padding: 63px 20px 15px 20px;
+}
+
+header ul
+{
+    list-style-type: none;
+    display: flex;
 }
 
 header a:hover
@@ -47,32 +72,49 @@ header a:hover
     border-top: solid 2px #0065FC;
 }
 
+/*header version tablette*/
+
+@media screen and (max-width: 992px) 
+{
+
+}
+
+/*header version mobile*/
+
 @media screen and (max-width: 768px) 
 {
     body
     {
         width: auto;
+        margin: 0;
+        margin-top: 15px;
     }
 
     header
     {
         flex-direction:column;
         align-items: center;
+        text-align: center;
+       
     }
 
     header nav
     {
         border-bottom: solid 3px #F2F2F2; 
-        margin-top: 20px;
-        padding-bottom: 15px;
         width: 100%;
-        position: relative;
+        margin-top: 20px;
     }
 
-    nav a 
+    header li
+    { 
+        display: block;
+        justify-content: space-around;
+        width: 50%;
+    }
+
+    header a 
     {
-        padding-bottom: 15px;
-        
+        padding-bottom: 17px; 
     }
 
     header a:hover
@@ -85,28 +127,129 @@ header a:hover
 
 /*main*/
 
+/*----------------------------------------------------------------*/
 
-main h1
+/*main zone Recherche */
+
+form
 {
-    font-size: 20px;
-    font-weight: bold;
+    margin-bottom: 40px;
 }
 
-main h2
+#rechercher
 {
-    font-size: 17px;
-    font-weight: bold;
+    padding: 15px;
+    color:white;
+    font-weight:600;
+    background-color: #0065FC;
+    border-radius: 0 12px 12px 0;
+    border: solid 1px #0065FC;
+    position: absolute;
 }
 
-main h3
+#loupe
 {
-    font-size: 15px;
-    font-weight: bold;
+    color: white;
+    background-color: white;
+    border-color: white;
 }
 
-#section_centrale, #filtres
+form input
+{
+    padding:15px 40px 15px 15px;
+    font-weight: bold;
+    border: solid 1px #F2F2F2;
+}
+
+form i
+{
+    padding: 15px;
+    background-color:#F2F2F2;
+    border: solid 1px #F2F2F2;
+    border-bottom: solid 3px #F2F2F2;
+    border-radius: 12px 0 0 12px;
+}
+
+
+@media screen and (max-width: 992px) 
+{
+
+}
+
+/*header version mobile*/
+
+@media screen and (max-width: 768px) 
+{
+    main
+    {
+        margin: 18px;
+    }
+
+    #rechercher
+    {
+        display: none;
+    }
+
+    form input
+    {
+        padding:15px 30px 15px 15px;
+    }
+
+    #loupe
+    {
+        background-color: #0065FC;
+        border-radius: 12px 12px 12px 12px;
+        border: solid 2px #0065FC;
+        position: relative;
+        top:1px; left:-6px
+    }
+}
+
+/* main zone filtres*/
+
+#filtres
+{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+#filtres h2
+{
+    margin-right: 15px;
+}
+
+#filtres div
 {
     display: flex;
+    margin: 0 10px 10px 0;
+    
 }
 
+#filtres i
+{
+    width: 50px;
+    height: 50px;
+    padding: 16px;
+    font-size: 130%;
+    background-color: #DEEBFF;
+    color: #0065FC;
+    border-radius: 25px;
+    position: relative;
+    top:1px; left: 25px;
+    text-align: center;
+}
 
+.bouton
+{
+   padding: 0 20px 0 40px;
+   background-color: white;
+   font-weight: bold;
+   border: solid 2px #F2F2F2;
+   overflow: hidden;
+   border-radius: 0 25px 25px 0;
+}
+
+.bouton:hover
+{
+    background-color: #F2F2F2;
+}
