--- a/dossier_CSS/styles.css
+++ b/dossier_CSS/styles.css
@@ -12,6 +12,7 @@ body
     font-family: 'Raleway', sans-serif;
     font-size: 16px;
     max-width: 1440px;
+    
 }
 
 body a 
@@ -38,6 +39,11 @@ body h3
     font-weight: bold;
 }
 
+body strong
+{
+    font-weight: bold;
+}
+
 /*----------------------------------------------------------------*/
 /*header*/
 
@@ -45,17 +51,18 @@ header
 {
     display: flex;
     justify-content: space-between; 
-    margin: 47px 40px 30px 40px;   
+    margin: 0 40px 0 40px;   
+    padding-top: 40px;
 }
 
 .logo
 {
-    width: 125px;
+    width: 110px;
 }
 
 header a
 {
-    padding: 60px 20px 15px 20px;
+    padding: 53px 30px 15px 30px;
 }
 
 header ul
@@ -70,12 +77,7 @@ header a:hover
     border-top: solid 2px #0065FC;
 }
 
-/*header version tablette*/
-
-@media screen and (max-width: 992px) 
-{
-
-}
+/*header version tablette : pas de changement*/
 
 /*header version mobile*/
 
@@ -85,34 +87,36 @@ header a:hover
     {
         width: auto;
         margin: 0;
-        margin-top: 15px;
-    }
-
-    header
-    {
         flex-direction:column;
         align-items: center;
-        text-align: center;
-       
+        padding-top: 15px;
     }
 
     header nav
     {
         border-bottom: solid 3px #F2F2F2; 
         width: 100%;
-        margin-top: 20px;
+        height: 53px;
+        margin: 15px 0 5px 0;
+    }
+
+    header ul
+    {
+        padding: 0;
     }
 
     header li
     { 
-        display: block;
+        display: flex;
         justify-content: space-around;
         width: 50%;
     }
 
     header a 
     {
-        padding-bottom: 16px; 
+        padding: 0 0 16px 0; 
+        width: 100%;
+        text-align: center;
     }
 
     header a:hover
@@ -128,14 +132,14 @@ header a:hover
 
 main
 {
-    margin: 50px 50px 50px 50px;
+    margin: 40px 50px 50px 50px;
 }
 
 /*main zone Recherche */
 
 form
 {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 #rechercher
@@ -172,30 +176,38 @@ form i
     border-radius: 12px 0 0 12px;
 }
 
-/*main zone Recherche version tablette*/
+/*----------------------------------------------------------------*/
 
-@media screen and (max-width: 992px) 
-{
+/*position section haute version tablette : pas de changement*/
 
-}
-
-/*main zone Recherche version mobile*/
+/*position section haute version mobile*/
 
 @media screen and (max-width: 768px) 
 {
     main
     {
         width: auto;
-        margin: 30px 0 40px 0;
+        margin: 0;
     }
     #section_haute
     {
-        margin: 0 15px 0 15px;
+        margin: 20px 10px 0 15px;
     }
+
+/*----------------------------------------------------------------*/
+
+/*main zone Recherche version tablette : pas de changement*/
+
+/*main zone Recherche version mobile*/
 
     #rechercher
     {
         display: none;
+    }
+
+    form
+    {
+        text-align: center;
     }
 
     form input
@@ -214,13 +226,12 @@ form i
 }
 
 /*----------------------------------------------------------------*/
+
 /* main zone filtres*/
 
 #filtres
 {
     display:flex;
-    flex-wrap:wrap;
-    margin: 0 20px 0 20px;
 }
 
 #filtres h2
@@ -231,22 +242,22 @@ form i
 #filtres div
 {
     display: flex;
-    margin: 0 10px 10px 0;
-    
 }
 
 #filtres i
 {
-    width: 50px;
-    height: 50px;
-    padding: 16px;
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 2px;
     font-size: 130%;
     background-color: #DEEBFF;
     color: #0065FC;
     border-radius: 25px;
     position: relative;
     top:1px; left: 25px;
-    text-align: center;
 }
 
 .bouton
@@ -269,21 +280,68 @@ form i
 #info
 {
     display: flex;
-    margin-top: 10px;
-    margin: 0 15px 0 15px;
+    margin: 15px 0 0 5px;
 }
 
 #info i
 {
     width: 30px;
     height: 30px;
-    padding-top: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 90%;
-    text-align: center;
     color: #0065FC;
     border: solid 2px #F2F2F2;
-    border-radius: 25px 25px 25px 25px;
+    border-radius: 25px;
     margin: 8px 10px 0 0;
+}
+
+/*main zone Filtres et info version tablette*/
+
+@media screen and (max-width: 992px) 
+{
+    #filtres
+    {
+        flex-direction: column;
+    }
+
+    #filtres div
+    {
+        margin-bottom: 10px;
+        flex-wrap: wrap;
+    }  
+}
+
+/* main zone filtres et info version mobile*/
+
+@media screen and (max-width: 768px) 
+{
+    #filtres
+    {
+        flex-direction: column;
+    }
+
+    #filtres h2
+    {
+    margin-left: 15px;
+    }
+
+    #filtres div
+    {
+        margin-bottom: 10px;
+        flex-wrap: wrap;
+    }
+
+    #info
+    {
+        margin-right: 0;
+    }
+
+    #info i
+    {
+        width: 40px;
+    }
 }
 
 /*----------------------------------------------------------------*/
@@ -364,27 +422,30 @@ form i
 #populaires
 {
     background-color: #F2F2F2;
+    height: auto;
+}
+
+#populaires .hôtels
+{
+    height: 90%;
 }
 
 #populaires .card 
 { 
-   width: 350px;
-   height: 150px;
+   
+   width: 100%;
+   height: 100%;
    background-color: white;
    box-shadow: 2px 2px 20px rgb(201, 198, 198);
    margin: 2%;
    border-radius: 18px;
 }
 
-#populaires .card:hover 
-{
-    box-shadow: 2px 2px 40px rgb(155, 153, 153);
-}
-
 .populaires_liste
 {
     display: flex;
     flex-direction: row;
+    height: 100%;
 }
 
 #populaires .card_image img
@@ -392,18 +453,23 @@ form i
     object-fit: cover;
     align-items: center;
     width: 130px;
-    height: 140px;
+    height: 93%;
     margin: 4% 0 4% 4%;
     border-radius: 15px 0 0 15px;
 }
 
 #populaires .card_corps
 {
-    height: 140px;
+    height: auto;
     margin: 0 10% 0 7%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+
+#populaires .card:hover 
+{
+    box-shadow: 2px 2px 40px rgb(155, 153, 153);
 }
 
 /*position section centrale*/
@@ -472,7 +538,10 @@ form i
 
 @media screen and (max-width: 992px) 
 {
-
+    #section_centrale
+    {
+       flex-direction: column-reverse;
+    } 
 }
 
 /*position section centrale version mobile*/
@@ -485,6 +554,48 @@ form i
     } 
 }
 
+/*main zone populaires version tablette*/
+
+@media screen and (max-width: 992px) 
+{
+   
+    #populaires
+    {
+        width: 100%;
+        height: 100%;
+        margin: 0 0 40px 0;
+    }
+
+    #populaires .hôtels
+    {
+        display:flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 100%;
+    }
+
+    #populaires .card
+    {
+        width: 40%;
+        height: 190px;
+        margin-bottom: 3%;
+    }
+
+    #populaires_liste
+    {
+        width: 100%;
+        height: 100%;
+    }
+
+    #populaires .card_image, #populaires .card_corps
+    {
+        width: 100%;
+        height: auto;
+        font-size: 80%;
+    }
+}
+
 /*main zone populaires version mobile*/
 
 @media screen and (max-width: 768px) 
@@ -494,23 +605,66 @@ form i
     {
         width: 100%;
         height: 100%;
-        margin: 0;
         border-radius: 0;
     }
 
     #populaires .card
     {
         width: 100%;
-        height: 100%;
+        height: 180px;
         margin-bottom: 3%;
+    }
+
+    #populaires_liste
+    {
+        width: 100%;
+        height: 100%;
     }
 
     #populaires .card_image, #populaires .card_corps
     {
         width: 100%;
-        height: 80%;
+        height: auto;
         font-size: 80%;
     }
+}
+
+/*main zone hébergements version tablette*/
+
+@media screen and (max-width: 992px) 
+{
+    #hébergements
+    {
+        width: 100%;
+        padding: 15px;
+    }
+    
+    #hébergements .hôtels
+    {
+        display:flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 100%;
+    }
+
+    #hébergements .card
+    {
+        width: 40%;
+        height: 220px;
+        font-size: 90%;
+    }
+
+    #hébergements .card_image
+    {
+        width: 100%;
+    }
+
+    #hébergements h1, #hébergements h2
+    {
+        margin-left: 20px;
+    }
+
 }
 
 /*main zone hébergements version mobile*/
@@ -530,7 +684,7 @@ form i
     {
         width: 100%;
         height: 199px;
-        font-size: 90%;
+        font-size: 80%;
     }
 
     #hébergements .card_image
@@ -565,6 +719,7 @@ form i
    background-color: white;
    box-shadow: 2px 2px 20px rgb(201, 198, 198);
    border-radius: 18px;
+   margin-bottom: 10px;
 }
 
 #activités .card_m 
@@ -574,6 +729,7 @@ form i
    background-color: white;
    box-shadow: 2px 2px 20px rgb(201, 198, 198);
    border-radius: 18px;
+   margin-bottom: 10px;
 }
 
 #activités .card_s
@@ -583,6 +739,7 @@ form i
    background-color: white;
    box-shadow: 2px 2px 20px rgb(201, 198, 198);
    border-radius: 18px;
+   margin-bottom: 10px;
 }
 
 #activités .card_l_image img
@@ -633,6 +790,7 @@ form i
 {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     margin: 20px 0 20px 0;
 }
 
@@ -647,7 +805,35 @@ form i
 
 @media screen and (max-width: 992px) 
 {
+    #activités
+    {
+        margin: 6% 6% 0 6%;
+    }
 
+    #activités .card_activités
+    {
+       flex-direction: column;
+       width: 100%;
+    } 
+
+        #activités .card_verticale
+    {
+        margin-bottom: 30px;
+    }
+
+    #activités .card_l, #activités .card_m, #activités .card_s
+    {
+        width: 100%;
+        height: 190px;
+        font-size: 90%;  
+        margin-top: 5%; 
+    }
+
+    #activités .card_l_image img, #activités .card_m_image img, #activités .card_s_image img
+    {
+        width: 100%;
+        height: 134px;
+    }
 }
 
 /*position activités version mobile*/
@@ -665,6 +851,11 @@ form i
        width: 100%;
     } 
 
+    #activités .card_verticale
+    {
+        margin-bottom: 0px;
+    }
+
     #activités .card_l, #activités .card_m, #activités .card_s
     {
         width: 100%;
@@ -678,13 +869,6 @@ form i
         width: 100%;
         height: 134px;
     }
-
-    #hébergements .card_corps
-    {
-        font-size: 70%;
-        align-items: center;
-    }
-
 }
 
 /*----------------------------------------------------------------*/
