--- a/dossier_CSS/styles_mobile.css
+++ b/dossier_CSS/styles_mobile.css
@@ -1,7 +1,5 @@
 /*header version mobile*/
 
-@media screen and (max-width: 768px) 
-{
     header
     {
         width: auto;
@@ -71,11 +69,15 @@
     form
     {
         text-align: center;
+        display: flex;
+        width: 100%;
+        max-width: 350px;
     }
 
     form input
     {
         padding:15px 30px 15px 15px;
+        width: 100%;
     }
 
     #loupe
@@ -126,20 +128,20 @@
 
 /*main zone hébergements version mobile*/
 
-    #hébergements
+    #hebergements
     {
         background-color: white;
         margin: 0;
         border-radius: 0;
     }
     
-    #hébergements .card
+    #hebergements .card
     {
         width: 100%;
         height: 199px;
     }
 
-    #hébergements .card_corps
+    #hebergements .card_corps
     {
         font-size: 70%;
         line-height: 2px;
@@ -149,14 +151,9 @@
 
 /*position activités version mobile*/
 
-    #activités
+    #section_activites
     {
         margin: 0 6% 0 6%;
-    }
-
-    #activités .card_verticale
-    {
-        margin-bottom: 0px;
     }
 
 /*----------------------------------------------------------------*/
@@ -168,4 +165,3 @@
         flex-direction: column;
         padding-left: 35px;
     }
-}
