--- a/dossier_CSS/styles_tablette.css
+++ b/dossier_CSS/styles_tablette.css
@@ -21,7 +21,7 @@
 
 /*position section centrale version tablette*/
 
-    #section_centrale
+    #section-centrale
     {
        flex-direction: column-reverse;
     } 
@@ -51,13 +51,18 @@
         margin-bottom: 3%;
     }
 
-    #populaires_liste
+    #populaires-liste
     {
         width: 100%;
         height: 100%;
     }
 
-    #populaires .card_corps h4
+    #populaires .card-corps h4 
+    {
+        margin: 4px 0 2px 0;
+    }
+
+    #populaires .card-corps p 
     {
         margin-top: 4px;
     }
@@ -86,12 +91,6 @@
         font-size: 80%;
     }
 
-    #hebergements .card_image img
-    {
-        width: 98%;
-        margin: 1% 1% 0 1%;
-    }
-
     #hebergements h2, #hebergements h3
     {
         margin-left: 20px;
@@ -101,29 +100,29 @@
 
 /*position activités version tablette*/
 
-    #section_activites
+    #section-activites
     {
         margin: 6% 6% 0 6%;
     }
 
-    #section_activites .card_activites
+    #section-activites .card-activites
     {
        flex-direction: column;
        width: 100%;
     } 
 
-    #section_activites .card_verticale
+    #section-activites .card-verticale
     {
         margin: 0;
     }
 
-    #section_activites .card_corps h4
+    #section-activites .card-corps h4
     {
         margin-left: 7%;
         margin-top: 2%;
     }
 
-    #section_activites .card_l, #section_activites .card_m, #section_activites .card_s
+    #section-activites .card-l, #section-activites .card-m, #section-activites .card-s
     {
         width: 100%;
         height: 190px;
@@ -131,7 +130,7 @@
         margin-top: 5%; 
     }
 
-    #section_activites .card_l_image img, #section_activites .card_m_image img, #section_activites .card_s_image img
+    #section-activites .card-l-image img, #section-activites .card-m-image img, #section-activites .card-s-image img
     {
         width: 100%;
         height: 134px;
